[project]
name = "loopy"
version = "0.1.0"
description = "A minimal abstraction over Python loops for clean, expressive iteration."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
