[project]
name = "libloop"
version = "0.1.0"
description = "Loopless, expressive iterable toolkit for Python"
authors = [{ name = "Eraldo Marques", email = "bmarques@voxleone.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

